iniciando sec anuncios

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./assets/CSS/headers/cabecalho-sigLog.css">
     <link rel="stylesheet" href="./assets/CSS/sobre/sobre-nos.css">
     <link rel="stylesheet" href="./assets/CSS/sobre/contagem.css">
+    <link rel="stylesheet" href="./assets/CSS/anuncios/anuncio-vagas.css">
 </head>
 
 <body>
@@ -53,7 +54,7 @@
             <p class="sobre__paragrafo">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de
                 todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
         </section>
-        <div class="contagem">
+        <section class="contagem">
             <section class="contagem__section">
                 <h2 class="contagem__section--contador">400+</h2>
                 <h3 class="contagem__section--identificador">Projetos concluídos</h3>
@@ -77,7 +78,15 @@
                 <p class="contagem__section--texto">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em
                     nossos produtos.</p>
             </section>
-        </div>
+        </section>
+        <section class="talentos">
+            <section class="procurando-talentos">
+                <span>Vagas abertas!</span>
+                <h2>Estamos procurando por talentos</h2>
+                <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+                <img src="./assets/img/pessoas-mesa.svg" alt="Colaboradores sentados à mesa.">
+            </section>
+        </section>
     </main>
 </body>
 
