adicionando as vagas e o comentario da colaboradora

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="./assets/CSS/sobre/sobre-nos.css">
     <link rel="stylesheet" href="./assets/CSS/sobre/contagem.css">
     <link rel="stylesheet" href="./assets/CSS/anuncios/anuncio-vagas.css">
+    <link rel="stylesheet" href="./assets/CSS/anuncios/vagas.css">
+    <link rel="stylesheet" href="./assets/CSS/fala-colaborador.css">
 </head>
 
 <body>
@@ -86,6 +88,51 @@
                 <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
                 <img src="./assets/img/pessoas-mesa.svg" alt="Colaboradores sentados à mesa.">
             </section>
+        </section>
+        <section class="vagas">
+            <ul class="vaga">
+                <h2 class="vaga__titulo">Design</h2>
+                <li class="vaga__tipo">
+                    <h3 class="vaga__tipo--titulo">Product Designer</h3>
+                    <p class="vaga__tipo--periodo vaga__texto">Full-time</p>
+                    <p class="vaga__tipo--salario vaga__texto">Faixa salarial: R$7.000</p>
+                </li>
+                <li class="vaga__tipo">
+                    <h3 class="vaga__tipo--titulo">UX Designer</h3>
+                    <p class="vaga__tipo--periodo vaga__texto">Full-time</p>
+                    <p class="vaga__tipo--salario vaga__texto">Faixa salarial: R$6.000</p>
+                </li>
+            </ul>
+            <ul class="vaga">
+                <h2 class="vaga__titulo">Desenvolvimento de Software</h2>
+                <li class="vaga__tipo">
+                    <h3 class="vaga__tipo--titulo">Desenvolvedor(a) iOS</h3>
+                    <p class="vaga__tipo--periodo vaga__texto">Full-time</p>
+                    <p class="vaga__tipo--salario vaga__texto">Faixa salarial: R$8.000</p>
+                </li>
+                <li class="vaga__tipo">
+                    <h3 class="vaga__tipo--titulo">Desenvolvedor(a) Front-end</h3>
+                    <p class="vaga__tipo--periodo vaga__texto">Full-time</p>
+                    <p class="vaga__tipo--salario vaga__texto">Faixa salarial: R$7.000</p>
+                </li>
+                <li class="vaga__tipo">
+                    <h3 class="vaga__tipo--titulo">Desenvolvedor(a) Back-end</h3>
+                    <p class="vaga__tipo--periodo vaga__texto">Full-time</p>
+                    <p class="vaga__tipo--salario vaga__texto">Faixa salarial: R$8.000</p>
+                </li>
+            </ul>
+        </section>
+        <section class="exemplos">
+            <div class="exemplo__conteudo">
+                <h3 class="exemplo__conteudo--veja">Veja o que nossos colaboradores falam sobre nós</h3>
+                <h2 class="exemplo__conteudo--fala">OptimusTech se importa com a saúde dos seus colaboradores e sempre
+                    procura nos dar todo tipo de auxílio possível.</h2>
+            </div>
+            <div>
+                <img class="exemplo__pessoa--avatar" src="./assets/img/Avatar.svg" alt="Avatar da Julia Castro">
+                <p class="exemplo__pessoa--nome">Júlia Castro</p>
+                <p class="exemplo__pessoa--profissao">Desenvolvedora Web</p>
+            </div>
         </section>
     </main>
 </body>
